# disconic

./: .build.yml  .editorconfig  .hydra.json  CHANGELOG.md  Cargo.toml  README.md  default.nix  example.env  flake.nix  module.nix
src/: client.rs  config.rs  discord.rs  handles.rs  lib.rs  main.rs
src/discord/: client.rs  common.rs  handler.rs  mod.rs
src/discord/commands/: album.rs  join.rs  leave.rs  mod.rs  nowplaying.rs  pause.rs  queue.rs  random.rs  remove.rs  resume.rs  skip.rs  song.rs  stop.rs
