[package]
name = "disconic"
description = "Discord bot for interacting with subsonic music libraries"
version = "0.2.1"
authors = [ "Gabriel Fontes <eu@misterio.me>" ]
edition = "2018"
homepage = "https://misterio.me"
license = "AGPL-3.0-or-later"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.9"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [ "rustls-tls" ]

[dependencies.sunk]
version = "0.1"
git = "https://github.com/Misterio77/sunk"
default-features = false
features = [ "rustls-tls" ]

[dependencies.serenity]
version = "0.11"
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = [ "voice" ]

[dependencies.songbird]
version = "0.3"
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = [ "builtin-queue" ]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.anyhow]
version = "1.0"

[dependencies.dotenv]
version = "0.15"
