[package]
name = "disconic"
description = "Discord bot for interacting with subsonic music libraries"
version = "1.0.0"
authors = [ "Gabriel Fontes <eu@misterio.me>" ]
edition = "2021"
homepage = "https://misterio.me"
license = "AGPL-3.0-or-later"
rust-version = "1.70.0"


[patch.crates-io.sunk]
git = "https://github.com/Misterio77/sunk"

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[patch.crates-io.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"

[patch.crates-io.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"


[dependencies.log]
version = "0.4"

[dependencies.simple_logger]
version = "4.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [ "rustls-tls" ]

[dependencies.sunk]
version = "0.1"
default-features = false
features = [ "rustls-tls" ]

[dependencies.serenity]
version = "0.11"
features = [ "client", "voice", "rustls_backend" ]

[dependencies.songbird]
version = "0.3"
features = [ "builtin-queue" ]

[dependencies.poise]
version = "0.4"

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3"]

[dependencies.tokio]
version = "1.0"
features = ["full", "rt-multi-thread", "signal"]

[dependencies.anyhow]
version = "1.0"

[dependencies.dotenv]
version = "0.15"

[dependencies.clap]
version = "4.0"
features = [ "derive", "env" ]
